--- a/mail/exmh/scripts/install
+++ b/mail/exmh/scripts/install
@@ -1,5 +1,6 @@
 #! /bin/sh
 #
+# $NetBSD: install,v 1.2 1997/11/19 14:53:34 agc Exp $
 # FreeBSD Id: install,v 1.2 1996/12/31 21:27:03 peter Exp
 #
 
@@ -23,7 +24,7 @@ then
 	mkdir ${PREFIX}/lib/exmh-${VERSION}
 fi
 
-LIBFILES='lib/*.tcl lib/*.bitmap lib/help.* lib/tclIndex lib/app-defaults* lib/*.mask lib/*.exp lib/mime.types lib/*.au'
+LIBFILES='lib/*.tcl lib/*.bitmap lib/help.* lib/tclIndex lib/app-defaults lib/app-defaults-* lib/*.mask lib/*.exp lib/mime.types lib/*.au'
 
 echo "install -c -o bin -g bin -m 444 ${LIBFILES} ${PREFIX}/lib/exmh-${VERSION}"
 install -c -o bin -g bin -m 444 ${LIBFILES} ${PREFIX}/lib/exmh-${VERSION}
