--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.9201 2010/04/13 06:55:04 obache Exp $
+$NetBSD: TODO,v 1.9202 2010/04/13 21:07:09 tonio Exp $
 
 Suggested new packages
 ======================
@@ -403,7 +403,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o ap2-auth-ldap-3.11
 	o ap2-chroot-0.5
 	o ap2-transform-0.6.0
-	o apache-ant-1.8.0
 	o apache-maven-3.0
 	o apache-tomcat55-5.5.28
 	o apsfilter-7.2.8
