--- a/pkgtools/pkg_comp/files/pkg_comp.8
+++ b/pkgtools/pkg_comp/files/pkg_comp.8
@@ -1,4 +1,4 @@
-.\" $NetBSD: pkg_comp.8,v 1.34 2010/04/13 20:59:19 wiz Exp $
+.\" $NetBSD: pkg_comp.8,v 1.35 2010/04/15 09:42:45 jmmv Exp $
 .\"
 .\" pkg_comp - Build packages inside a clean chroot environment
 .\" Copyright (c) 2002, 2003, 2004, 2005 Julio M. Merino Vidal <jmmv@NetBSD.org>
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd April 13, 2010
+.Dd April 15, 2010
 .Dt PKG_COMP 8
 .Os
 .Sh NAME
@@ -265,6 +265,10 @@ See
 for more information.
 Defaults to
 .Ql no .
+.It PKG_DBDIR
+Location of the packages database.
+Defaults to
+.Pa /var/db/pkg .
 .It PKG_SYSCONFBASE
 Base directory of configuration files.
 Defaults to
