--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.9207 2010/04/16 15:46:29 taca Exp $
+$NetBSD: TODO,v 1.9208 2010/04/17 10:12:06 gls Exp $
 
 Suggested new packages
 ======================
@@ -1099,7 +1099,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o pcal-4.8
 	o pcmanfm-0.5.2 [pkg/42451]
 	o pdmenu-1.2.87
-	o pekwm-0.1.12
 	o pen-0.17.3
 	o perl-5.12.0
 	o pessulus-2.28.0 [GNOME 2.28]
