--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.9212 2010/04/17 13:30:13 obache Exp $
+$NetBSD: TODO,v 1.9213 2010/04/18 08:55:13 seb Exp $
 
 Suggested new packages
 ======================
@@ -1070,7 +1070,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o p5-Config-General-2.45
 	o p5-DBD-postgresql-2.17.1
 	o p5-DateTime-Locale-0.45
-	o p5-DateTime-TimeZone-1.17
 	o p5-ExtUtils-CBuilder-0.2703
 	o p5-Geo-IPfree-1.100470 [pkg/42833]
 	o p5-IMDB-Film-0.45
