--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14194 2015/03/05 11:17:03 wiz Exp $
+$NetBSD: TODO,v 1.14195 2015/03/05 14:44:57 mef Exp $
 
 Suggested new packages
 ======================
@@ -466,7 +466,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o dd_rescue-1.45
 	o delegate-9.9.9
 	o denemo-1.2.0
-	o dhid-5.3
 	o digikam-4.7.0
 	o dillo-3.0.4.1
 	o dinotrace-9.4d
