--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14196 2015/03/05 21:05:22 wiz Exp $
+$NetBSD: TODO,v 1.14197 2015/03/06 21:04:16 ryoon Exp $
 
 Suggested new packages
 ======================
@@ -525,7 +525,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o fillets-ng-data-0.7.4
 	o filerunner-14.06.18.10
 	o findutils-4.4.2
-	o fish-2.1.1
 	o flashplayer-0.4.13
 	o flightgear-2.12
 	o fltk2-2.0pre8323
