--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14203 2015/03/08 15:12:50 wen Exp $
+$NetBSD: TODO,v 1.14204 2015/03/08 17:04:45 taca Exp $
 
 Suggested new packages
 ======================
@@ -957,7 +957,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o rtty-4.0 [at ftp://ftp.isc.org/isc/rtty/]
 	o ruby-ncurses-1.3.1
 	o ruby-review-1.4.0 [wip]
-	o ruby22-2.2.0
 	o sabayon-2.30.1 [GNOME 2.30]
 	o sablecc-3.7
 	o samba-4.0.23
