--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14216 2015/03/09 09:18:12 wiz Exp $
+$NetBSD: TODO,v 1.14217 2015/03/09 23:23:16 tnn Exp $
 
 Suggested new packages
 ======================
@@ -780,7 +780,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o mknmz-wwwoffle-0.7.2
 	o mkvtoolnix-7.6.0
 	o modular-xorg-server-1.16.4
-	o modular-xorg-server-1.17.1
+	o modular-xorg-server-1.17.1 (see pkgsrc-wip/modular-xorg-server)
 	o molden-4.8 [after which PR 40252 can be closed]
 	o mono-3.12.0
 	o moserial-2.30.0 [GNOME 2.30]
