--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14218 2015/03/10 05:17:59 mef Exp $
+$NetBSD: TODO,v 1.14219 2015/03/10 21:08:39 asau Exp $
 
 Suggested new packages
 ======================
@@ -959,7 +959,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o samba-4.1.14
 	o sane-1.0.24
 	o sarg-2.2.5
-	o sbcl-1.2.1
 	o scew-0.4.0
 	o scilab-5.5.1
 	o scipy-0.13.3
