--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.14221 2015/03/11 15:08:04 wiz Exp $
+$NetBSD: TODO,v 1.14222 2015/03/11 21:09:52 tnn Exp $
 
 Suggested new packages
 ======================
@@ -722,7 +722,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libmcs-0.7.2
 	o libnasl-2.3.1
 	o liboobs-2.32.0 [GNOME 2.32]
-	o libpcap-1.5.1
 	o libplist-1.11
 	o libprelude-1.2.5
 	o libquantum-1.1.0 [pkg/43728, development release]
