--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17437 2017/06/14 20:32:05 wiz Exp $
+$NetBSD: TODO,v 1.17438 2017/06/14 20:35:27 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1521,7 +1521,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o tomboy-1.10.2
 	o top-3.8beta1
 	o topgit-0.8
-	o tor-browser-6.5.1
+	o tor-browser-7.0.1
 	o totem-3.14.1
 	o totem-pl-parser-3.10.3
 	o tripwire-2.3.1 [see also pkg/22362]
@@ -1589,6 +1589,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o wmx-gnome-8
 	o worker-3.8.3
 	o wxGTK-3.1.0
+	o wxGTK30-3.0.3
 	o wxRemind-101
 	o x264-devel-20170610
 	o x2vnc-1.31
