--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17440 2017/06/15 11:50:44 jperkin Exp $
+$NetBSD: TODO,v 1.17441 2017/06/15 18:33:36 nils Exp $
 
 Suggested new packages
 ======================
@@ -1430,7 +1430,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o smproxy-1.0.3
 	o snes9x-1.53
 	o snobol-2.0
-	o snort-2.9.8.0
 	o snow-20130616
 	o softhsm-2.0.0
 	o solfege-3.22.0
