--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17442 2017/06/16 05:40:01 adam Exp $
+$NetBSD: TODO,v 1.17443 2017/06/17 14:00:37 schmonz Exp $
 
 Suggested new packages
 ======================
@@ -610,6 +610,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ess-15.09
 	o et-2.60
 	o etach-1.4.1
+	o etckeeper-1.18.7
 	o eterm-0.9.6
 	o etm-3.0.43 [wip/py-etmtk]
 	o etm-891
