--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17443 2017/06/17 14:00:37 schmonz Exp $
+$NetBSD: TODO,v 1.17444 2017/06/18 15:28:41 taca Exp $
 
 Suggested new packages
 ======================
@@ -546,7 +546,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o darktable-2.2.0
 	o dasher-4.11
 	o dateutils-0.4.1
-	o davical-1.1.4
 	o dd_rescue-1.46
 	o dd_rhelp-0.3.0
 	o ddrescue-1.21
@@ -1379,8 +1378,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ruby-actionpack-4.2.7.1
 	o ruby-activemodel-4.2.7.1
 	o ruby-builder-3.2.2
-	o ruby-chef-12.17.44
-	o ruby-chef-zero-5.1.1
 	o ruby-jquery-rails-4.2.1
 	o ruby-ncurses-1.3.1 [where is this package available from?]
 	o ruby-railties-4.2.7.1
