--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17444 2017/06/18 15:28:41 taca Exp $
+$NetBSD: TODO,v 1.17445 2017/06/18 17:49:54 morr Exp $
 
 Suggested new packages
 ======================
@@ -1550,7 +1550,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o vicq-0.4.2
 	o vile-9.8q
 	o vim-8.0.0633
-	o vim-share-8.0.0633
 	o vinagre-3.16.1
 	o vino-3.16.0
 	o virt-manager-1.3.2
