--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17449 2017/06/19 06:52:19 wiz Exp $
+$NetBSD: TODO,v 1.17450 2017/06/19 08:02:21 leot Exp $
 
 Suggested new packages
 ======================
@@ -1561,8 +1561,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o vice-3.0
 	o vicq-0.4.2
 	o vile-9.8q
-	o vim-8.0.0646
-	o vim-share-8.0.0646
 	o vinagre-3.16.1
 	o vino-3.16.0
 	o virt-manager-1.3.2
