--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17451 2017/06/19 08:23:37 adam Exp $
+$NetBSD: TODO,v 1.17452 2017/06/19 18:42:33 maya Exp $
 
 Suggested new packages
 ======================
@@ -683,7 +683,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o fs-uae-2.8.2 [pkg/51895]
 	o ftplibpp-2.0.2
 	o fuse-archivemount-0.8.7
-	o fuse-encfs-1.5.2
 	o fuse-mp3fs-0.91 [needs fixes to work on NetBSD; started in wip]
 	o fvwm-devel-2.7.0
 	o fvwm2-themes-0.7.0
