--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18285 2018/04/23 12:02:17 adam Exp $
+$NetBSD: TODO,v 1.18286 2018/04/25 12:57:43 triaxx Exp $
 
 Suggested new packages
 ======================
@@ -416,7 +416,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o asn1c-0.9.27
 	o aspell-nb-2.0.10
 	o asterisk13-13.17.1
-	o asunder-2.8
 	o aterm-1.0.1
 	o attica-qt5-5.45.0
 	o aubio-0.4.2
