--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18286 2018/04/25 12:57:43 triaxx Exp $
+$NetBSD: TODO,v 1.18287 2018/04/27 14:16:33 wiz Exp $
 
 Suggested new packages
 ======================
@@ -757,7 +757,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o grilo-0.2.12
 	o grilo-plugins-0.2.14
 	o gromacs-5.1.2
-	o gsed-4.5
 	o gss-1.0.3
 	o gst-plugins1-omx-1.10.0
 	o gst123-0.3.5
