--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18297 2018/04/28 19:28:30 wiz Exp $
+$NetBSD: TODO,v 1.18298 2018/04/28 19:52:57 wiz Exp $
 
 Suggested new packages
 ======================
@@ -342,7 +342,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o LPRng-core-3.8.35
 	o Mesa-17.3.1
 	o MesaDemos-8.3.0
-	o MesaLib-18.0.1
+	o MesaLib-18.0.2
 	o OdfConverter-4.0
 	o PACK-0.0.4
 	o PAM-0.99.7.1
@@ -677,6 +677,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ghc-8.2
 	o ghc7-7.10.1
 	o ghdl-0.33
+	o gimp-2.10
 	o gkrellm-2.3.5
 	o gkrellm-multiping-2.0.13
 	o gkrellm-server-2.3.5
@@ -966,7 +967,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libisofs-1.4.2
 	o libixp-0.5 [breaks wmii-3.6, wait for compatible version; see also wmii+ixp entry]
 	o libjit-1.0.2
-	o libjpeg-turbo-1.5.1
+	o libjpeg-turbo-2.0
 	o libkface-4.14.0
 	o libkgeomap-4.14.0
 	o libkvkontakte-4.14.0
@@ -1084,6 +1085,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o mupdf-1.13.0 [leot, wip]
 	o muse-0.9.2
 	o myodbc-5.3.4
+	o mysql-server-8.0
 	o mysql-workbench-6.3
 	o nagios-base-4.3.1
 	o nant-0.92
@@ -1489,7 +1491,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o whowatch-1.8.5
 	o windowlab-1.40
 	o wine-3.0
-	o wine-devel-2.22
+	o wine-devel-3.7
 	o wmi-11
 	o wmii+ixp-3.9.2 [pkg/43459; wip (wmii-devel); see also libixp entry]
 	o wmx-8
