--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18563 2018/09/23 14:29:41 leot Exp $
+$NetBSD: TODO,v 1.18564 2018/09/24 09:55:05 adam Exp $
 
 Suggested new packages
 ======================
@@ -1241,7 +1241,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-mercurial-4.7.1
 	o py-musicbrainz-0.7.4
 	o py-newt-0.52.20
-	o py-oauth2client-4.1.3
 	o py-omniORBpy-3.7
 	o py-pendrell-0.3.7
 	o py-postgresql-5.0.6
