--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18567 2018/09/29 12:34:35 tnn Exp $
+$NetBSD: TODO,v 1.18568 2018/09/30 12:03:07 wiedi Exp $
 
 Suggested new packages
 ======================
@@ -1456,7 +1456,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o userspace-rcu-0.9.1
 	o utilisp-1.14
 	o vala-0.42.1
-	o valgrind-3.13
 	o varnish-6.0
 	o varnish-5.1.3
 	o vbetool-1.1
