--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18569 2018/09/30 19:12:25 wiz Exp $
+$NetBSD: TODO,v 1.18570 2018/09/30 22:30:11 schmonz Exp $
 
 Suggested new packages
 ======================
@@ -1081,7 +1081,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o mosh-1.3.2
 	o mousetweaks-3.12.0 [wip]
 	o mp3blaster-3.2.6
-	o mp3splt-2.6.2
 	o mp3splt-gtk-0.9.0
 	o mpdas-0.4.1
 	o mserv-devel-0.41
