--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18572 2018/10/01 09:40:28 wiz Exp $
+$NetBSD: TODO,v 1.18573 2018/10/01 12:37:23 ryoon Exp $
 
 Suggested new packages
 ======================
@@ -565,7 +565,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o elf-0.11
 	o elfsh-0.65 [pkg/33959]
 	o elfsh-0.78
-	o elftoolchain-0.7.1 [pkg/48227]
 	o elm-me-2.4.127
 	o elscreen-1.5.3
 	o emacs-26.1
